refactor: TimetableController SonarCloud 이슈 수정
- 주석 코드 제거
- Stream.toList() 사용
- @ApiResponses 래퍼 제거
- 불필요한 import 정리